add interactivity to links and button

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -21,6 +21,7 @@
                                 PetStory <br>
                                 online
                             </h1>
+                            <img src="../../assets/icons/logo-bamboo.svg" alt="bamboo" class="logo-bamboo">
                         </a>
                     </div>
                     <nav class="navigation">
