--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -81,6 +81,31 @@
                 </button>
             </div>
         </section>
+
+        <section class="backstage">
+            <div class="wrapper">
+                <img class="flower1" src="../../assets/images/flower1.png"">
+                <div class="backstage__grid">
+                    <img src="../../assets/images/bamboo-cap.png" alt="photo" class="backstage__photo">
+                    <div class="backstage__text-container">
+                    <h3 class="backstage__title">
+                        The Backstage of the Wilderness World.
+                    </h3>
+                    <p class="backstage__text">
+                        The site was founded on the basis of a volunteer movement to protect and care for animals.
+                    </p>
+                    <h4 class="backstage_subtitle">
+                        How it works
+                    </h4>
+                    <p class="backstage__text">
+                        The main goal is to help the animals, as well as the nature reserves and zoos where they are kept. We are currently working on video projects targeting pandas in China, eagles on an island near Los Angeles, alligators in Florida and gorillas in the Congo. These have a total of more than 1,500 mammals and reptiles.                    </p>
+                </div>
+                </div>
+            </div>
+        </section>
+
+
+
     </main>
     <script src="script.js"></script>
 </body>
