--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -85,9 +85,9 @@
         <section class="backstage">
             <div class="wrapper">
                 <img class="flower1" src="../../assets/images/flower1.png"">
-                <div class="backstage__grid">
-                    <img src="../../assets/images/bamboo-cap.png" alt="photo" class="backstage__photo">
-                    <div class="backstage__text-container">
+                <div class=" backstage__grid">
+                <img src="../../assets/images/bamboo-cap.png" alt="photo" class="backstage__photo">
+                <div class="backstage__text-container">
                     <h3 class="backstage__title">
                         The Backstage of the Wilderness World.
                     </h3>
@@ -98,16 +98,112 @@
                         How it works
                     </h4>
                     <p class="backstage__text">
-                        The main goal is to help the animals, as well as the nature reserves and zoos where they are kept. We are currently working on video projects targeting pandas in China, eagles on an island near Los Angeles, alligators in Florida and gorillas in the Congo. These have a total of more than 1,500 mammals and reptiles.                    </p>
+                        The main goal is to help the animals, as well as the nature reserves and zoos where they are
+                        kept. We are currently working on video projects targeting pandas in China, eagles on an island
+                        near Los Angeles, alligators in Florida and gorillas in the Congo. These have a total of more
+                        than 1,500 mammals and reptiles. </p>
                 </div>
+            </div>
+            </div>
+        </section>
+
+        <section class="pets">
+            <div class="wrapper">
+                <div class="arrow-left">
+                    <button class="arrow__button-left">
+                        ←
+                    </button>
                 </div>
+                <div class="pets__grid">
+                    <div class="pets__item">
+                        <img src="../../assets/images/pets1.png" alt="pet" class="pets__item-img">
+                        <div class="pets__text">
+                            <h5 class="pets__item-title">
+                                giant Pandas
+                            </h5>
+                            <p class="pets__item-text">
+                                Native to Southwest China
+                            </p>
+                            <img src="../../assets/icons/banana-bamboo.svg" alt="banana-bamboo-icon" class="pets__icon">
+                        </div>
+                    </div>
+                    <div class="pets__item">
+                        <img src="../../assets/images/pets2.png" alt="pet" class="pets__item-img">
+                        <div class="pets__text">
+                            <h5 class="pets__item-title">
+                                eagles
+                            </h5>
+                            <p class="pets__item-text">
+                                Native to South America
+                            </p>
+                            <img src="../../assets/icons/meet-fish.svg" alt="banana-bamboo-icon" class="pets__icon meet-fish__icon">
+                        </div>
+                    </div>
+                    <div class="pets__item">
+                        <img src="../../assets/images/pets3.png" alt="pet" class="pets__item-img">
+                        <div class="pets__text">
+                            <h5 class="pets__item-title">
+                                gorillas
+                            </h5>
+                            <p class="pets__item-text">
+                                Native to Congo
+                            </p>
+                            <img src="../../assets/icons/banana-bamboo.svg" alt="banana-bamboo-icon" class="pets__icon">
+                        </div>
+                    </div>
+                    <div class="pets__item">
+                        <img src="../../assets/images/pets4.png" alt="pet" class="pets__item-img">
+                        <div class="pets__text">
+                            <h5 class="pets__item-title">
+                                Two-toed Sloth
+                            </h5>
+                            <p class="pets__item-text">
+                                Mesoamerica, South America
+                            </p>
+                            <img src="../../assets/icons/banana-bamboo.svg" alt="banana-bamboo-icon" class="pets__icon">
+                        </div>
+                    </div>
+                    <div class="pets__item">
+                        <img src="../../assets/images/pets5.png" alt="pet" class="pets__item-img">
+                        <div class="pets__text">
+                            <h5 class="pets__item-title">
+                                cheetahs
+                            </h5>
+                            <p class="pets__item-text">
+                                Native to Africa
+                            </p>
+                            <img src="../../assets/icons/meet-fish.svg" alt="banana-bamboo-icon" class="pets__icon meet-fish__icon">
+                        </div>
+                    </div>
+                    <div class="pets__item">
+                        <img src="../../assets/images/pets6.png" alt="pet" class="pets__item-img">
+                        <div class="pets__text">
+                            <h5 class="pets__item-title">
+                                penguins
+                            </h5>
+                            <p class="pets__item-text">
+                                Native to Antarctica
+                            </p>
+                            <img src="../../assets/icons/meet-fish.svg" alt="banana-bamboo-icon" class="pets__icon meet-fish__icon">
+                        </div>
+                    </div>
+                </div>
+                <div class="arrow-right">
+                    <button class="arrow__button-right">
+                        →
+                    </button>
+                </div>
+                <button class="button pets__button">
+                    choose your favorite
+                </button>
+                <img class="flower2" src="../../assets/images/flower2.png"">
+                <img class=" flower3" src="../../assets/images/flower3.png"">
             </div>
         </section>
 
 
-
     </main>
-    <script src="script.js"></script>
+    <script src=" script.js"></script>
 </body>
 
 </html>
