add link in pick-and-feed section

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -88,13 +88,13 @@
                 <div class=" backstage__grid">
                 <img src="../../assets/images/bamboo-cap.png" alt="photo" class="backstage__photo">
                 <div class="backstage__text-container">
-                    <h3 class="backstage__title">
+                    <h3 class="backstage__title title">
                         The Backstage of the Wilderness World.
                     </h3>
                     <p class="backstage__text">
                         The site was founded on the basis of a volunteer movement to protect and care for animals.
                     </p>
-                    <h4 class="backstage_subtitle">
+                    <h4 class="backstage_subtitle subtitle">
                         How it works
                     </h4>
                     <p class="backstage__text">
@@ -136,7 +136,8 @@
                             <p class="pets__item-text">
                                 Native to South America
                             </p>
-                            <img src="../../assets/icons/meet-fish.svg" alt="banana-bamboo-icon" class="pets__icon meet-fish__icon">
+                            <img src="../../assets/icons/meet-fish.svg" alt="banana-bamboo-icon"
+                                class="pets__icon meet-fish__icon">
                         </div>
                     </div>
                     <div class="pets__item">
@@ -172,7 +173,8 @@
                             <p class="pets__item-text">
                                 Native to Africa
                             </p>
-                            <img src="../../assets/icons/meet-fish.svg" alt="banana-bamboo-icon" class="pets__icon meet-fish__icon">
+                            <img src="../../assets/icons/meet-fish.svg" alt="banana-bamboo-icon"
+                                class="pets__icon meet-fish__icon">
                         </div>
                     </div>
                     <div class="pets__item">
@@ -184,7 +186,8 @@
                             <p class="pets__item-text">
                                 Native to Antarctica
                             </p>
-                            <img src="../../assets/icons/meet-fish.svg" alt="banana-bamboo-icon" class="pets__icon meet-fish__icon">
+                            <img src="../../assets/icons/meet-fish.svg" alt="banana-bamboo-icon"
+                                class="pets__icon meet-fish__icon">
                         </div>
                     </div>
                 </div>
@@ -201,6 +204,75 @@
             </div>
         </section>
 
+        <section class=" pick-and-feed">
+                <div class="wrapper">
+                    <div class="pick-and-feed__container">
+                        <h3 class="pick-and-feed__title title">
+                            Pick and feed a friend
+                        </h3>
+                        <h4 class="pick-and-feed__subtitle subtitle">
+                            We know the animals bring you joy, and in these extraordinary times, we’re glad.
+                        </h4>
+                        <p class="pick-and-feed__text text__bold">
+                            During a time when the COVID-19 epidemic is touching all of our lives, we’re proud and glad
+                            that people around the world find joy in PetStory.
+                        </p>
+                        <p class="pick-and-feed__text">
+                            Even though the zoo has reopened, we need you now more than ever to help us deal with these
+                            problems. Please consider a gift to our 
+                            <a href="../donate/index.html" target="_blank">
+                            <span class="link__underline">
+                            Emergency Support Fund.
+                            </span>
+                            </a>
+                        </p>
+                        <h4 class="pick-and-feed__small-title title">
+                            How it works
+                        </h4>
+                        <div class="how-it-works__container">
+                            <div class="container__item">
+                                <div class="item__photo">
+                                    <img src="../../assets/icons/pay.svg" alt="icon" class="item__icon">
+                                </div>
+                            </div>
+                            <div class="container__item container__arrow">
+                                <img src="../../assets/images/arrow.svg" alt="arrow" class="container__arrow">
+                            </div>
+                            <div class="container__item">
+                                <div class="item__photo">
+                                    <img src="../../assets/icons/zoo.svg" alt="icon" class="item__icon">
+                                </div>
+                            </div>
+                            <div class="container__item container__arrow">
+                                <img src="../../assets/images/arrow.svg " alt="arrow" class="container__arrow">
+                            </div>
+                            <div class="container__item">
+                                <div class="item__photo">
+                                    <img src="../../assets/icons/monkey.svg" alt="icon" class="item__icon">
+                                </div>
+                            </div>
+                            <div class="container__item container__text container__text-left">
+                                <p class="pick-and-feed__text">
+                                    Pay with card
+                                </p>
+                            </div>
+                            <div class="container__item container__text container__text-center">
+                                <p class="pick-and-feed__text">
+                                    Payment goes to the zoo
+                                </p>
+                            </div>
+                            <div class="container__item container__text container__text-right">
+                                <p class="pick-and-feed__text">
+                                    Your favourite animal gets delicious dish
+                                </p>
+                            </div>
+                        </div>
+                        <button class="button pick-and-feed__button">
+                            Feed a friend now
+                        </button>
+                    </div>
+                </div>
+        </section>
 
     </main>
     <script src=" script.js"></script>
