end section testimonial

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -15,7 +15,7 @@
         <div class="wrapper">
             <div class="header__nav">
                 <div class="header__left">
-                    <div class="header__logo">
+                    <div class="header__logo logo__container">
                         <a href='index.html'>
                             <h1 class="logo">
                                 PetStory <br>
@@ -219,11 +219,11 @@
                         </p>
                         <p class="pick-and-feed__text">
                             Even though the zoo has reopened, we need you now more than ever to help us deal with these
-                            problems. Please consider a gift to our 
+                            problems. Please consider a gift to our
                             <a href="../donate/index.html" target="_blank">
-                            <span class="link__underline">
-                            Emergency Support Fund.
-                            </span>
+                                <span class="link__underline">
+                                    Emergency Support Fund.
+                                </span>
                             </a>
                         </p>
                         <h4 class="pick-and-feed__small-title title">
@@ -274,7 +274,116 @@
                 </div>
         </section>
 
+        <section class="testimonials">
+            <div class="wrapper">
+                <div class="testimonials__block">
+                    <h4 class="testimonials__small-title title">
+                        Testimonials
+                    </h4>
+                    <div class="testimonials__container">
+                        <div class="testimonials__item">
+                            <div class="testimonials__info">
+                                <img src="../../assets/icons/testimonial-1.png" alt="author__pic" class="author__pic">
+                                <div class="testimonial__info">
+                                    <p class="author__name">
+                                        Michael John
+                                    </p>
+                                    <div class="testimonial__location-time">
+                                        <p class="testimonial__info-location">
+                                            Local Austria
+                                        </p>
+                                        <p class="testimonial__info-time">
+                                            Today
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <p class="testimonial__text">
+                                The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                                The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                            </p>
+                        </div>
+                        <div class="testimonials__item">
+                            <div class="testimonials__info">
+                                <img src="../../assets/icons/testimonial-2.png" alt="author__pic" class="author__pic">
+                                <div class="testimonial__info">
+                                    <p class="author__name">
+                                        Oskar Samborsky
+                                    </p>
+                                    <div class="testimonial__location-time">
+                                        <p class="testimonial__info-location">
+                                            Local Austria
+                                        </p>
+                                        <p class="testimonial__info-time">
+                                            Yesterday
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <p class="testimonial__text">
+                                Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. 
+                                The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                                The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                            </p>
+                        </div>
+                        <div class="testimonials__item">
+                            <div class="testimonials__info">
+                                <img src="../../assets/icons/testimonial-3.png" alt="author__pic" class="author__pic">
+                                <div class="testimonial__info">
+                                    <p class="author__name">
+                                        Fredericka Michelin
+                                    </p>
+                                    <div class="testimonial__location-time">
+                                        <p class="testimonial__info-location">
+                                            Local Austria
+                                        </p>
+                                        <p class="testimonial__info-time">
+                                            Yesterday
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <p class="testimonial__text">
+                                The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                                The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met.
+                                The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                            </p>
+                        </div>
+                        <div class="testimonials__item">
+                            <div class="testimonials__info">
+                                <img src="../../assets/icons/testimonial-4.png" alt="author__pic" class="author__pic">
+                                <div class="testimonial__info">
+                                    <p class="author__name">
+                                        Mila Riksha
+                                    </p>
+                                    <div class="testimonial__location-time">
+                                        <p class="testimonial__info-location">
+                                            Local Austria
+                                        </p>
+                                        <p class="testimonial__info-time">
+                                            Yesterday
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <p class="testimonial__text">
+                                My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas.
+                                The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                            </p>
+                        </div>
+                    </div>
+                    <input class='scrol' type="range" value="0" min="0" max="6">
+                    <button class="button testimonials__button">
+                        Leave feedback
+                    </button>
+                    <img src="../../assets/images/flower4.png" alt="flower" class="flower4">
+                </div>
+            </div>
+        </section>
     </main>
+
+
+  >
     <script src=" script.js"></script>
 </body>
 
