--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -15,7 +15,7 @@
         <div class="wrapper">
             <div class="header__nav">
                 <div class="header__left">
-                    <div class="header__logo logo__container">
+                    <div class="logo__container">
                         <a href='index.html'>
                             <h1 class="logo">
                                 PetStory <br>
@@ -76,7 +76,7 @@
                         </p>
                     </div>
                 </div>
-                <button class="button watch__button">
+                <button class="button-round watch__button">
                     watch online
                 </button>
             </div>
@@ -196,7 +196,7 @@
                         →
                     </button>
                 </div>
-                <button class="button pets__button">
+                <button class="button-round pets__button">
                     choose your favorite
                 </button>
                 <img class="flower2" src="../../assets/images/flower2.png"">
@@ -267,7 +267,7 @@
                                 </p>
                             </div>
                         </div>
-                        <button class="button pick-and-feed__button">
+                        <button class="button-round pick-and-feed__button">
                             Feed a friend now
                         </button>
                     </div>
@@ -299,8 +299,14 @@
                                 </div>
                             </div>
                             <p class="testimonial__text">
-                                The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
-                                The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                                The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online
+                                zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My
+                                son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to
+                                instill a love for animals.
+                                The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online
+                                zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My
+                                son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to
+                                instill a love for animals.
                             </p>
                         </div>
                         <div class="testimonials__item">
@@ -321,9 +327,18 @@
                                 </div>
                             </div>
                             <p class="testimonial__text">
-                                Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. 
-                                The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
-                                The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                                Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve
+                                met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways
+                                to instill a love for animals.The best online zoo I’ve met. My son delighted very much
+                                ljves to watch gouillas.
+                                The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online
+                                zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My
+                                son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to
+                                instill a love for animals.
+                                The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online
+                                zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My
+                                son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to
+                                instill a love for animals.
                             </p>
                         </div>
                         <div class="testimonials__item">
@@ -344,9 +359,16 @@
                                 </div>
                             </div>
                             <p class="testimonial__text">
-                                The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
-                                The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met.
-                                The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                                The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online
+                                zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My
+                                son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to
+                                instill a love for animals.
+                                The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online
+                                zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met.
+                                The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online
+                                zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My
+                                son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to
+                                instill a love for animals.
                             </p>
                         </div>
                         <div class="testimonials__item">
@@ -367,13 +389,21 @@
                                 </div>
                             </div>
                             <p class="testimonial__text">
-                                My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas.
-                                The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                                My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to
+                                instill a love for animals.The best online zoo I’ve met. My son delighted very much
+                                ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The
+                                best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo
+                                is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son
+                                delighted very much ljves to watch gouillas.
+                                The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online
+                                zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My
+                                son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to
+                                instill a love for animals.
                             </p>
                         </div>
                     </div>
                     <input class='scrol' type="range" value="0" min="0" max="6">
-                    <button class="button testimonials__button">
+                    <button class="button-box testimonials__button">
                         Leave feedback
                     </button>
                     <img src="../../assets/images/flower4.png" alt="flower" class="flower4">
@@ -383,7 +413,110 @@
     </main>
 
 
-  >
+    <footer class="footer">
+        <div class="wrapper">
+            <div class="footer__top">
+                <div class="logo__container">
+                    <a href='index.html'>
+                        <h1 class="logo">
+                            PetStory <br>
+                            online
+                        </h1>
+                        <img src="../../assets/icons/logo-bamboo.svg" alt="bamboo" class="logo-bamboo">
+                    </a>
+                </div>
+                <div class="footer__form-container">
+                    <div class="footer__subtitle subtitle">
+                        Subscribe to our news
+                    </div>
+                    <form action="#" class="footer__container">
+                        <input type="text" id="email" name="email" placeholder="Enter your email">
+                        <input type="submit" id='submit' value="Submit">
+                    </form>
+                </div>
+            </div>
+            <button class="footer__button button-box">
+                donate for volunteers
+            </button>
+            <div class="footer__bottom">
+               <div class="networks">
+                 <ul class="networks__list">
+                    <li class="networks__item">
+                        <div class="network__icon">
+                            <img src="../../assets/icons/fb.svg" alt="facebook" class="network__pic">
+                        </div>
+                        <p class="network__text">
+                            Facebook
+                        </p>
+                    </li>
+                    <li class="networks__item">
+                        <div class="network__icon">
+                            <img src="../../assets/icons/tw.svg" alt="twitter" class="network__pic">
+                        </div>
+                        <p class="network__text">
+                            Twitter
+                        </p>
+                    </li>
+                    <li class="networks__item">
+                        <div class="network__icon">
+                            <img src="../../assets/icons/ig.svg" alt="instagram" class="network__pic">
+                        </div>
+                        <p class="network__text">
+                            Instagram
+                        </p>
+                    </li>
+                    <li class="networks__item">
+                        <div class="network__icon">
+                            <img src="../../assets/icons/yt.svg" alt="youtube" class="network__pic">
+                        </div>
+                        <p class="network__text">
+                            Youtube
+                        </p>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer__navigation">
+                <nav class="navigation">
+                    <ul class="navigation__list">
+                        <li class="navigation__item">
+                            <a class="navigation__link" href='index.html'>
+                                About
+                            </a>
+                        </li>
+                        <li class="navigation__item">
+                            <a class="navigation__link" href="#">
+                                Map
+                            </a>
+                        </li>
+                        <li class="navigation__item">
+                            <a class="navigation__link" href="#">
+                                Zoos
+                            </a>
+                        </li>
+                        <li class="navigation__item">
+                            <a class="navigation__link" href='../donate/index.html'>
+                                Donate
+                            </a>
+                        </li>
+                        <li class="navigation__item">
+                            <a class="navigation__link" href="#">
+                                Contact us
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="footer__info">
+                <p class="footer__text">
+                    Designed by Alisa Samborskaya
+                </p>
+                <p class="footer__text">
+                    ©RSSchool & ©Yem Digital 2021
+                                </p>
+            </div>
+            </div>
+        </div>
+    </footer>
     <script src=" script.js"></script>
 </body>
 
